[package]
name = "du-jwalk"
version = "0.1.0"
edition = "2021"



[dependencies]
anyhow = "1.0.94"
clap = { version = "4.5.23", features = ["derive"] }
filesize = "0.2.0"
futures = "0.3.31"
humansize = "2.1.3"
humantime = "2.1.0"
jwalk = "0.8.1"
num_cpus = "1.16.0"
tokio = { version = "1.42.0", features = ["full"] }
gix-path = "0.10.13"

